# rfid-trf7970-grpc

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: quickstart.yml
protos/: rfid.proto
src/: include.rs  main.rs  reader.rs  rfid.rs  rfid_serial.rs  scaffold.rs  serial.rs  serial_err.rs  utils.rs
src/reader/: constants.rs  err.rs
src/serial/: err.rs  low.rs
