[package]
name = "rfid-trf7970-grpc"
version = "0.1.0"
authors = ["rcyl <raymondchuayitlong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
bitflags = "1.2.1"
prost = "0.6.1"
log = "0.4"
regex = "1"
tonic = { version="0.2.0", features = ["tls"]}
tokio = { version="0.2.18", features = ["stream", "macros"]}
futures = "0.3"
subprocess = "0.2.6"
simple_logger = "1.11.0"
function_name = "0.2.0"

[build-dependencies]
tonic-build = "0.2.0"

[dev-dependencies]
mockall = "0.8.0"
futures-util = "0.3"
serial_test = "*"
rand  = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
